--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://laknee88.github.io/'
+baseURL = 'https://laknee88.github.io/zx10r-for-sale/'
 languageCode = 'en-us'
 title = '2023 ZX10R For Sale - $18,500'
 theme = ["hugo-video", "paperesque"]
